# sukiru

./: .editorconfig  .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  go.mod  justfile  kasetto.config.example.yaml  skills.config.example.yaml  vercel.json
.github/workflows/: ci.yml  labels.yaml  release.yml
Formula/: kasetto.rb  sukiru.rb
cmd/sukiro/: main.go
docs/: agents.md  commands.md  configuration.md  getting-started.md  index.md  installation.md
internal/config/: config.go
internal/hashing/: hash.go
internal/report/: report.go
internal/source/: source.go
internal/state/: state.go
internal/syncer/: syncer.go
internal/util/: fs.go
scripts/: install.sh  release.sh  update-homebrew-formula.sh
site/: index.html
src/: app.rs  banner.rs  cli.rs  colors.rs  db.rs  error.rs  fsops.rs  lib.rs  list_tui.rs  main.rs  model.rs  profile.rs  tui.rs  ui.rs
src/commands/: clean.rs  completions.rs  doctor.rs  init.rs  list.rs  mod.rs  remove.rs  self_update.rs  show.rs  sync.rs  uninstall.rs
src/commands/sync/: mcps.rs  mod.rs  skills.rs
src/home/: mod.rs  prompt.rs
src/list/: browse.rs  mod.rs  render.rs  session.rs  tab.rs  types.rs
src/mcps/: codex.rs  merge.rs  mod.rs  pack.rs
src/source/: auth.rs  hosts.rs  mod.rs  parse.rs  remote.rs
