[package]
name = "kasetto"
version = "1.0.0"
edition = "2021"
description = "An extremely fast AI skills manager, written in Rust."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
walkdir = "2"
