[package]
name = "kasetto"
version = "1.0.0"
edition = "2021"
description = "An extremely fast AI skills manager, written in Rust."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
unicode-width = "0.1"
